# HDMR-Lib

./: .gitignore  EMPR-with-four-backends.py  EMPR.py  EMPRBenchmark.py  EMPR_C.c  EMPR_tf.py  EMPR_torch.py  EMPRwithfourbackends.py  HDMR.py  INSTRUCTIONS_FOR_PYPI.md  LICENSE  MANIFEST.in  PYPI_RELEASE.md  README.md  __init__.py  decomposition.py  empr.py  hdmr.py  metrics.py  mn5_test.py  monitor.py  nolibrary.py  numpyimplementation  pyproject.toml  requirements-all.txt  requirements-dev.txt  requirements-tensorflow.txt  requirements-torch.txt  requirements.txt  setup.py  test.py  test_test.py  tests.ipynb  torchimp.py  utils.py
.github/workflows/: docs.yml  publish.yml  pypi.yml  tests.yml
backends/: __init__.py  base.py  cupy_backend.py  numpy_backend.py  tensorflow_backend.py  torch_backend.py
docs/: api.md  conf.py  examples.md  fundamentals.md  index.md  install.md  overview_of_hdmr_lib.md  quickstart.md  requirements.txt  team.md
docs/_build/html/: .buildinfo  api.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  quickstart.html  search.html  (+1 more)
docs/_static/: custom.css
docs/examples/: GALLERY_HEADER.rst  index.md
docs/user_guide/: backends.md  index.md  inspect_components.md  quick_start.md  reconstruct_data.md  run_a_decomposition.md  troubleshoot.md  workflow_overview.md
examples/: README.md  advanced_usage.py  backend_comparison.py  basic_empr_example.py  basic_hdmr_example.py  basic_usage.py  gpu_acceleration.py
hdmr_core/: decomposition.py  hdmr.py  metrics.py  utils.py
hdmr_core/backends/: __init__.py  base.py  cupy_backend.py  numpy_backend.py  tensorflow_backend.py  torch_backend.py
hdmr_core/examples/: basic_empr_example.py  basic_hdmr_example.py
hdmr_core/tests/: test_backends.py
hdmrlib/: __init__.py  empr.py  hdmr.py  metrics.py
hdmrlib/backends/: __init__.py  base.py  numpy_backend.py  tensorflow_backend.py  torch_backend.py
tests/: __init__.py  test_backends.py  test_empr.py  test_hdmr.py  test_metrics.py
(+19 files in other folders)
